# Supernova

./: .gitignore  ASTConvIncludes.cpp  ASTConvIncludes.h  ASTConverter.cpp  ASTConverter.h  ASTConverterError.h  ASTConverterListener.cpp  ASTConverterListener.h  AbstractSyntaxTree.h  AbstractSyntaxTreeNode.cpp  AbstractSyntaxTreeNode.h  AddressOfNode.h  AndNode.h  Antlr_Parser_1.sln  Antlr_Parser_1.vcxproj  Antlr_Parser_1.vcxproj.filters  ArrayAccessNode.h  ArrayIterator.cpp  ArrayIterator.h  ArrayNode.h  AssertNode.h  AssignmentNode.h  BasicTypeNode.h  BinaryOperatorNode.h  BlockNode.h  BooleanNotNode.h  BreakNode.h  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CastNode.h  CompositeNode.h  ConstantNode.h  ConstantValue.cpp  ConstantValue.h  ContinueNode.h  DataType.h  DataTypeNode.h  DeclarationListItemNode.h  DeclarationNode.h  (+249 more)
GeneratedCLikeLanguage/: Grammar.interp  Grammar.tokens  GrammarBaseListener.h  GrammarLexer.cpp  GrammarLexer.h  GrammarLexer.interp  GrammarLexer.tokens  GrammarListener.cpp  GrammarListener.h  GrammarParser.cpp  GrammarParser.h
GeneratedCLikeLanguage/Grammar.g4/: Grammar.interp  Grammar.tokens  GrammarBaseListener.cpp  GrammarBaseListener.h  GrammarLexer.cpp  GrammarLexer.h  GrammarLexer.interp  GrammarListener.h  GrammarParser.cpp  GrammarParser.h
SourceTests/: all_in_one.txt  arr_1.txt  arr_2.txt  arr_3.txt  arr_4.txt  arr_5.txt  arr_6.txt  auto_conversion_1.txt  auto_conversion_2.txt  auto_conversion_3.txt  auto_conversion_4.txt  bin_1.txt  bit_shift_1.txt  bit_shift_logical.txt  cast_1.txt  cast_2.txt  dereference_1.txt  double_swap_1.txt  double_swap_1_output.txt  free_1.txt  hex_1.txt  implicit_conversion_1.txt  implicit_error_1.txt  malloc_1.txt  member_pointer.txt  numeric_literal_1.txt  numeric_literal_2.txt  numeric_literal_3.txt  pointer_1.txt  pointer_to_a_struct_field.txt  pointer_to_a_struct_field_output.txt  pointer_to_the_element_of_array.txt  print_arr_1.txt  print_arr_2.txt  print_const_ptr_1.txt  print_pointer.txt  print_type_1.txt  promotion_1.txt  promotion_2.txt  read_array_from_pointers.txt  (+17 more)
cmake/: FindAntlr4Runtime.cmake
tests/: ReferencePtrTests.cpp
